--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@mui/material": "^5.13.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "classnames": "^2.3.2"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^1.4.4",
